# ai-image-renamer

./: .babelrc  .distignore  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  OCTO.md  README.md  ai-image-renamer.php  composer.json  main.py  package.json  phpcs.xml.dist  pyproject.toml  readme Kopie.txt  readme.txt  requirements.txt  uninstall.php  vite.config.mjs
.clavix/: config.json
.clavix/instructions/workflows/: archive.md  implement.md  improve.md  plan.md  prd.md  refine.md  start.md  summarize.md  verify.md
.clavix/outputs/ai-image-renamer/: full-prd.md  quick-prd.md  tasks.md
.clavix/outputs/prompts/: comp-20260110-011800-x9p4.md
_languages/: ai-image-renamer-de_DE.mo  ai-image-renamer-de_DE.po  ai-image-renamer.pot  es_ES.mo  ru_RU.po
ai_image_renamer/: __init__.py  cli.py  renamer.py  utils.py
assets/css/: admin.css  index.css  main.css
assets/js/: admin-tabs.js  admin.js  index.asset.php  index.js  index.js.map  main.js
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/api/: action-hooks.md  examples.md  filter-hooks.md  functions.md
docs/introduction/: changelog.md  donate.md  download.md  index.md
docs/support/: faq.md
docs/usage/: installation.md  quick-start.md  settings.md
includes/: Plugin.php
includes/Admin/: Settings_Page.php
includes/Hooks/: Image_Uploader.php
includes/Services/: Encryption_Service.php  Groq_Service.php  Template_Engine.php
includes/Utils/: API_Key_Validator.php  File_Sanitizer.php  Rate_Limiter.php  SVG_Sanitizer.php
languages/: ai-image-renamer-de_DE.mo  ai-image-renamer-de_DE.po  ai-image-renamer-es_ES.po  ai-image-renamer-ru_RU.mo  ai-image-renamer.mo  ai-image-renamer.po
scripts/: generate-asset-file.mjs  plugin-zip.mjs
src/ai_image_renamer/: __init__.py  cli.py  renamer.py  utils.py
tests/: __init__.py  test_cli.py  test_renamer.py  test_utils.py
views/admin/: settings.twig  sidebar.twig
views/admin/components/: donation-banner.twig  footer.twig  header.twig  intro.twig  tabs.twig
views/admin/fields/: advanced.twig  alt-text.twig  api-key.twig  enabled.twig  file-types.twig  general.twig  max-keywords.twig  model-limits-info.twig  model.twig  models.twig
views/admin/sections/: hero.twig
