[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_image_renamer"]

[project]
name = "rename-images"
version = "0.1.0"
description = "Rename images based on AI tags"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
rename-images = "ai_image_renamer.cli:main"
